--- a/Credit Card Fraud Detection.ipynb
+++ b/Credit Card Fraud Detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Credit Card Fraud Detection.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMo8xqscaCtEEoLR/uLBWrQ"
+      "authorship_tag": "ABX9TyMb8j02/4VX/DYlzTBrhhF9"
     },
     "kernelspec": {
       "name": "python3",
@@ -37,7 +37,7 @@
       "source": [
         "Credit card fraud is a big problem in the modern world. In the United States, for instance, over [80% of the population](https://) have at least one credit card. Such a great number also means great room for fraud. But this is not only a United States problem. In Brazil, over [12 million people](https://extra.globo.com/noticias/economia/fraudes-financeiras-geraram-um-prejuizo-de-cerca-de-18-bilhao-em-12-meses-23908141.html) were the victim of credit card fraud only in 2019.\n",
         "\n",
-        "In this project, we'll work with fraud detection using a [Kaggle dataset](https://www.kaggle.com/mlg-ulb/creditcardfraud) that contains transactions made by credit cards in September 2013 by European cardholders. This data presents transactions that occurred in two days, where we have 492 frauds out of 284,807 transactions. Therefore it is highly unbalanced as the positive class (frauds) account for 0.172% of all transactions. Also, it contains only numerical input variables which are the result of a PCA transformation. The only features which have not been transformed with PCA are 'Time' and 'Amount'.  Feature 'Class' is the response variable and it takes value 1 in case of fraud and 0 otherwise.\n",
+        "In this project, we'll work with fraud detection using a [Kaggle dataset](https://www.kaggle.com/mlg-ulb/creditcardfraud) that contains transactions made by credit cards in September 2013 by European cardholders. This data presents transactions that occurred in two days, where we have 492 frauds out of 284,807 transactions. Therefore it is highly unbalanced as the positive class (frauds) account for 0.172% of all transactions. Also, it contains only numerical input variables which are the result of a [Principal Component Analysis - PCA](https://en.wikipedia.org/wiki/Principal_component_analysis) transformation. The only features which have not been transformed with PCA are 'Time' and 'Amount'.  Feature 'Class' is the response variable and it takes value 1 in case of fraud and 0 otherwise.\n",
         "\n",
         "The goal of this project is to create machine learning models that efficiently identify credit card frauds based on the data we have. For that, we'll go through the following steps:\n",
         "\n",
@@ -121,7 +121,7 @@
         "credit_card = pd.read_csv('/content/drive/My Drive/Colab Notebooks/creditcard.csv')\n",
         "credit_card.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +395,7 @@
       "source": [
         "credit_card.info()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +474,7 @@
       "source": [
         "credit_card[['Time', 'Amount']].describe()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -602,7 +602,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -661,7 +661,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -709,7 +709,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -762,7 +762,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -821,7 +821,7 @@
         "\n",
         "credit_card.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1095,7 +1095,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1133,7 +1133,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1310,7 +1310,7 @@
         "\n",
         "report(y_pred_log)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1405,7 +1405,7 @@
         "best_depth = acc_tree.argmax()+3\n",
         "print(f'The best accuracy was {round(acc_tree.max(), 4)} with depth={best_depth}.') "
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1449,7 +1449,7 @@
         "\n",
         "report(y_pred_tree)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1515,7 +1515,7 @@
         "graph = pydotplus.graph_from_dot_data(dot)  \n",
         "Image(graph.create_png())"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1587,7 +1587,7 @@
         "best_k = acc_knn.argmax()+1\n",
         "print(f'The best accuracy was {round(acc_knn.max(), 4)} with k={best_k}.') "
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1633,7 +1633,7 @@
         "\n",
         "report(y_pred_knn)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1706,7 +1706,7 @@
         "\n",
         "report(y_pred_xgb)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1784,7 +1784,7 @@
         "\n",
         "report(y_pred_xgb_scaled)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1873,7 +1873,7 @@
         "\n",
         "summary"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
