--- a/Credit Card Fraud Detection.ipynb
+++ b/Credit Card Fraud Detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Credit Card Fraud Detection.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMb8j02/4VX/DYlzTBrhhF9"
+      "authorship_tag": "ABX9TyOEpXCF+WRIwBKptYTWDY3g"
     },
     "kernelspec": {
       "name": "python3",
@@ -1201,7 +1201,7 @@
         "\n",
         "### **Accuracy**\n",
         "\n",
-        "[Accuracy](https://en.wikipedia.org/wiki/Accuracy_and_precision#In_binary_classification) is the easir metric to understand. It shows the correct answer ratio and it is calculated divding the correct answer by the total number of answers:\n",
+        "[Accuracy](https://en.wikipedia.org/wiki/Accuracy_and_precision#In_binary_classification) is the easiest metric to understand. It shows the correct answer ratio and it is calculated dividing the correct answer by the total number of answers:\n",
         "\n",
         "$$\n",
         " \\frac{\\text{TP + TN}}{\\text{TP + TN + FP + FN}}\n",
