--- a/Machine Learning for Churn Prediction.ipynb
+++ b/Machine Learning for Churn Prediction.ipynb
@@ -6,7 +6,7 @@
       "name": " Machine Learning for Churn Prediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPBKJNotyvunBagHqqeXwbH"
+      "authorship_tag": "ABX9TyPSXlgE6c+RRleUMSfPyxrr"
     },
     "kernelspec": {
       "name": "python3",
@@ -32,7 +32,7 @@
         "\n",
         "With the evolution of machine learning algorithms and data science, [churn prediction](https://baremetrics.com/academy/churn-prediction-can-improve-business) has become a very important part of every company's strategy. If a company can accurately predict that a customer is about to churn, it can then act to prevent the churn. Usually working to keep a client is cheaper than working to get a new client.\n",
         "\n",
-        "In this project, we'll work with a churn prediction [dataset](https://raw.githubusercontent.com/carlosfab/dsnp2/master/datasets/WA_Fn-UseC_-Telco-Customer-Churn.csv) from the [IBM Developer platform](https://developer.ibm.com/technologies/data-science/patterns/predict-customer-churn-using-watson-studio-and-jupyter-notebooks/#). The main goal is to build a machine learning model capable of accurately predict that a customer will churn based on the information available in the dataset. In order to accomplish that, we'll go through some main steps, such as:\n",
+        "In this project, we'll work with a churn prediction [dataset](https://raw.githubusercontent.com/carlosfab/dsnp2/master/datasets/WA_Fn-UseC_-Telco-Customer-Churn.csv) of a phone/internet company from the [IBM Developer platform](https://developer.ibm.com/technologies/data-science/patterns/predict-customer-churn-using-watson-studio-and-jupyter-notebooks/#). The main goal is to build a machine learning model capable of accurately predict that a customer will churn based on the information available in the dataset. In order to accomplish that, we'll go through some main steps, such as:\n",
         "\n",
         "* Exploratory data analysis;\n",
         "* Data preparation;\n",
