--- a/Machine Learning for Churn Prediction.ipynb
+++ b/Machine Learning for Churn Prediction.ipynb
@@ -6,7 +6,7 @@
       "name": " Machine Learning for Churn Prediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPSXlgE6c+RRleUMSfPyxrr"
+      "authorship_tag": "ABX9TyPnCIY1g/tLIUcWdlY0To6r"
     },
     "kernelspec": {
       "name": "python3",
@@ -89,7 +89,7 @@
         "churn = pd.read_csv('https://raw.githubusercontent.com/carlosfab/dsnp2/master/datasets/WA_Fn-UseC_-Telco-Customer-Churn.csv')\n",
         "churn.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,7 +516,7 @@
         "# Dropping the customerID column\n",
         "churn.drop('customerID', axis=1, inplace=True)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +555,7 @@
       "source": [
         "churn['PaymentMethod'] = churn['PaymentMethod'].str.replace('(automatic)', '').str.replace('(', '').str.replace(')', '').str.strip()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -657,7 +657,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -682,7 +682,7 @@
       "source": [
         "We can learn a lot from these charts. Here are some insights:\n",
         "\n",
-        "* Customers without dependents are two times more likely to churn;\n",
+        "* Customers without dependents are two times more likely to churn.\n",
         "* Customers that use paperless billing and optical fiber are more likely to churn. \n",
         "* Customers with no online security or backup, no device protection, and no tech support are from two to three times more likely to churn.\n",
         "* Customers with no internet service are unlikely to churn.\n",
@@ -718,7 +718,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -764,7 +764,7 @@
         "sns.countplot(churn['Churn'])\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -813,7 +813,7 @@
         "\n",
         "churn.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1160,7 +1160,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1454,7 +1454,7 @@
         "colab_type": "text"
       },
       "source": [
-        "The Logistic Regression model presented a slight improvement after tuned. Not as good as the SVM model.\n",
+        "The Logistic Regression model presented a slight improvement after tuned. Not as good as the SVM model, though.\n",
         "\n",
         "We'll now tune the XGBoost model. XGBoost has lots of hyperparameters. Because of this, we'll split the process into four steps.\n",
         "Considering the `learning_rate` equals to 0.1, we'll tune `n_estimators`, then we'll tune `max_depth` and `min_child_weight` together. After this, we'll tune `gamma` and finally tune the `learning_rate`."
