--- a/Análise de Risco de Crédito com Machine Learning.ipynb
+++ b/Análise de Risco de Crédito com Machine Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Análise de Risco de Crédito com Machine Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZlv4mXFlR71mcKG/zcXAs",
+      "authorship_tag": "ABX9TyP9dAmZv5rnvpkXKUHKjx6d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
         "# **Análise de Risco de Crédito com Machine Learning**\n",
         "\n",
         "![1.jpg](https://www.imagemhost.com.br/images/2020/08/08/1.jpg)\n",
+        "<a href='https://www.freepik.com/vectors/business'>Business vector created by pch.vector - www.freepik.com</a>\n",
         "\n",
         "Cada mais intuições financeiras tem utilizado técnicas de análise de dados e aprendizado de máquina em suas operações. Alguns exemplos de situações onde tais técnicas podem ser de grande importância para o sucesso da instituição são identificação de fraudes em catões de crédito e identificação de risco de crédito. Neste projeto, abordaremos o segundo exemplo.\n",
         "\n",
