--- a/Análise de Risco de Crédito com Machine Learning.ipynb
+++ b/Análise de Risco de Crédito com Machine Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Análise de Risco de Crédito com Machine Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP9dAmZv5rnvpkXKUHKjx6d",
+      "authorship_tag": "ABX9TyOT2I0JsGB1lqOyQsgNdKt7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,9 +37,9 @@
         "![1.jpg](https://www.imagemhost.com.br/images/2020/08/08/1.jpg)\n",
         "<a href='https://www.freepik.com/vectors/business'>Business vector created by pch.vector - www.freepik.com</a>\n",
         "\n",
-        "Cada mais intuições financeiras tem utilizado técnicas de análise de dados e aprendizado de máquina em suas operações. Alguns exemplos de situações onde tais técnicas podem ser de grande importância para o sucesso da instituição são identificação de fraudes em catões de crédito e identificação de risco de crédito. Neste projeto, abordaremos o segundo exemplo.\n",
+        "Cada vez mais intuições financeiras têm utilizado técnicas de análise de dados e aprendizado de máquina em suas operações. Alguns exemplos de situações onde tais técnicas podem ser de grande importância para o sucesso da instituição são [detecção de fraudes](https://github.com/otavio-s-s/data_science/blob/master/Credit%20Card%20Fraud%20Detection.ipynb) em cartões de crédito e identificação de risco de crédito. Neste projeto, abordaremos o segundo exemplo.\n",
         "\n",
-        "[Risco de crédito](https://www.bndes.gov.br/wps/portal/site/home/quem-somos/etica-e-compliance/!ut/p/z0/fY3LCsIwEEW_psuSiO9lwRe2ILiQmk2JyVhH24xNRunnG4trl4cz94xQohTK6TfWmpGcbiKf1awqlvl6NznIYnuUI5lN8012WuXjhZyLvVD_D2IB712nMqEMOYaeRXlxFkKFLjDyywyfEnmjFhLpKMVo-0QCo9ERGGqPVtsoY-BKvv1RDYE1pRZSj8FQSL99Tw2EYeUdhUQOqrJQGQ8WmcTzoc4fPQwk2w!!/) é a possibilidade de ocorrência de perdas financeiras devido ao não cumprimento das obrigações por parte do tomador. Em outras palavras, é o risco de inadimplência por parte do tomador do crédito. Com isso em mente, trabalharemos neste projeto com um *dataset* representando, em cada linha, várias das características de uma aplicação para crédito, bem como o se tal operação foi classificada ou não como inadimplência. Este *dataset* pode ser encontrado [aqui](http://dl.dropboxusercontent.com/s/xn2a4kzf0zer0xu/acquisition_train.csv?dl=0).\n",
+        "[Risco de crédito](https://www.bndes.gov.br/wps/portal/site/home/quem-somos/etica-e-compliance/!ut/p/z0/fY3LCsIwEEW_psuSiO9lwRe2ILiQmk2JyVhH24xNRunnG4trl4cz94xQohTK6TfWmpGcbiKf1awqlvl6NznIYnuUI5lN8012WuXjhZyLvVD_D2IB712nMqEMOYaeRXlxFkKFLjDyywyfEnmjFhLpKMVo-0QCo9ERGGqPVtsoY-BKvv1RDYE1pRZSj8FQSL99Tw2EYeUdhUQOqrJQGQ8WmcTzoc4fPQwk2w!!/) é a possibilidade de ocorrência de perdas financeiras devido ao não cumprimento das obrigações por parte do tomador. Em outras palavras, é o risco de inadimplência por parte do tomador do crédito. Com isso em mente, trabalharemos neste projeto com um *dataset* representando, em cada linha, várias das características de uma aplicação para crédito, bem como se tal operação foi classificada ou não como inadimplência. Este *dataset* pode ser encontrado [aqui](http://dl.dropboxusercontent.com/s/xn2a4kzf0zer0xu/acquisition_train.csv?dl=0).\n",
         "\n",
         "Portanto, o objetivo deste trabalho é treinar, testar e avaliar um modelo de *machine learning* capaz de prever com alto índice de acerto se uma operação de crédito resultará ou não em inadimplência. Para isso, passaremos pelas seguintes etapas:\n",
         "\n",
