--- a/Análise de Risco de Crédito com Machine Learning.ipynb
+++ b/Análise de Risco de Crédito com Machine Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Análise de Risco de Crédito com Machine Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOT2I0JsGB1lqOyQsgNdKt7",
+      "authorship_tag": "ABX9TyO+pv6CDNBl0NRARLwis7Gx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "source": [
         "# **Análise de Risco de Crédito com Machine Learning**\n",
         "\n",
-        "![1.jpg](https://www.imagemhost.com.br/images/2020/08/08/1.jpg)\n",
+        "![Imgur](https://i.imgur.com/XlhLuJ1.jpg)\n",
         "<a href='https://www.freepik.com/vectors/business'>Business vector created by pch.vector - www.freepik.com</a>\n",
         "\n",
         "Cada vez mais intuições financeiras têm utilizado técnicas de análise de dados e aprendizado de máquina em suas operações. Alguns exemplos de situações onde tais técnicas podem ser de grande importância para o sucesso da instituição são [detecção de fraudes](https://github.com/otavio-s-s/data_science/blob/master/Credit%20Card%20Fraud%20Detection.ipynb) em cartões de crédito e identificação de risco de crédito. Neste projeto, abordaremos o segundo exemplo.\n",
@@ -44,7 +44,7 @@
         "Portanto, o objetivo deste trabalho é treinar, testar e avaliar um modelo de *machine learning* capaz de prever com alto índice de acerto se uma operação de crédito resultará ou não em inadimplência. Para isso, passaremos pelas seguintes etapas:\n",
         "\n",
         "* Exploração e limpeza dos dados;\n",
-        "* *Fature engineering*;\n",
+        "* *Feature engineering*;\n",
         "* Preparação dos dados;\n",
         "* Seleção de um modelo de *machine learning*;\n",
         "* Ajuste, treinamento, teste e avaliação do modelo selecionado.\n"
@@ -79,7 +79,7 @@
         "!pip install https://github.com/matplotlib/basemap/archive/master.zip -q\n",
         "!pip install pyproj==1.9.6 -q"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +148,7 @@
         "credito = pd.read_csv('http://dl.dropboxusercontent.com/s/xn2a4kzf0zer0xu/acquisition_train.csv?dl=0')\n",
         "credito.head()"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +496,7 @@
       "source": [
         "credito.info()"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,7 +580,7 @@
       "source": [
         "(credito.isnull().sum() / credito.shape[0] * 100).sort_values(ascending=False)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -665,7 +665,7 @@
       "source": [
         "credito.nunique().sort_values()"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -750,7 +750,7 @@
       "source": [
         "credito.describe()"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1051,7 +1051,7 @@
         "print('Valore inf em reported_income: {}'.format(len(credito[credito['reported_income'] == np.inf])))\n",
         "print('Valore negativos em external_data_provider_email_seen_before: {}'.format(len(credito[credito['external_data_provider_email_seen_before'] < 0])))"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1128,7 +1128,7 @@
         "\n",
         "credito_clean.head()"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1417,7 +1417,7 @@
         "        \n",
         "    return col"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1448,7 +1448,7 @@
         "    else:\n",
         "        credito_clean[col].fillna(value=credito_clean[col].median(), inplace=True, axis=0)"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1475,7 +1475,7 @@
       "source": [
         "credito_clean.isnull().sum()"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1560,7 +1560,7 @@
         "\n",
         "credito_clean.head()"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1825,7 +1825,7 @@
         "\n",
         "plt.tight_layout()"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1878,7 +1878,7 @@
         "\n",
         "plt.tight_layout()"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1915,7 +1915,7 @@
       "source": [
         "credito_clean['overnight'] = credito_clean['application_time_applied'].apply(lambda x: 1 if x <= 6 else 0)"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1960,7 +1960,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2022,7 +2022,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2075,7 +2075,7 @@
         "\n",
         "credito_clean.head()"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2365,7 +2365,7 @@
         "plt.title('Distribuição dos Cados de Inadimplência Pelo Brasil')\n",
         "plt.show()"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2405,7 +2405,7 @@
       "source": [
         "credito_clean.drop(['latitude', 'longitude', 'lat_lon'], axis=1, inplace=True)"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2436,7 +2436,7 @@
         "\n",
         "credito_clean['target_default'].value_counts()"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2516,7 +2516,7 @@
         "\n",
         "credito_clean.head()"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2955,7 +2955,7 @@
         "\n",
         "credito_clean.head()"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3566,7 +3566,7 @@
         "ax.set_title('Dados após o balnaceamento')\n",
         "plt.show()"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3660,7 +3660,7 @@
         "summary = summary.transpose()    \n",
         "summary.style.applymap(lambda x: 'background-color: lightgreen' if x >= 0.75 else '')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3802,7 +3802,7 @@
         "\n",
         "print(f'Melhor resultado: {result.best_score_} para {result.best_params_}')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3834,7 +3834,7 @@
         "\n",
         "print(f'Melhor resultado: {result.best_score_} para {result.best_params_}')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3866,7 +3866,7 @@
         "\n",
         "print(f'Melhor resultado: {result.best_score_} para {result.best_params_}')"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3898,7 +3898,7 @@
         "\n",
         "print(f'Melhor resultado: {result.best_score_} para {result.best_params_}')"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3930,7 +3930,7 @@
         "\n",
         "print(f'Melhor resultado: {result.best_score_} para {result.best_params_}')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3978,7 +3978,7 @@
         "ax.set_xlabel('Previsão')\n",
         "plt.show()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
