--- a/Análise de Risco de Crédito com Machine Learning.ipynb
+++ b/Análise de Risco de Crédito com Machine Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Análise de Risco de Crédito com Machine Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO+pv6CDNBl0NRARLwis7Gx",
+      "authorship_tag": "ABX9TyMOMBNtGYezPjeMnMwsy95C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1083,6 +1083,8 @@
         "* Preencher os valores nulos na coluna `facebook_profile` com `False`, considerando assim que são pessoas sem perfil nessa rede social. Ainda, vamos substituir os valores `True` e `False` nessa coluna por `Sim` e `Não`;\n",
         "\n",
         "* Substituir valores `@hotmaill.com` e `@gmaill.com` na coluna `email` por `@hotmail.com` e `@gmail.com`, respectivamente.\n",
+        "\n",
+        "* Remover a string `BR-` da coluna `shipping_state`, deixando apenas a sigla do estado. A coluna apresenta dados no formato `BR-MG`, `BR-SP`, etc.\n",
         " \n",
         "* Descartar linha onde a variável alvo está ausente e transforma os valores da variável alvo para 0 e 1."
       ]
@@ -1121,6 +1123,9 @@
         "# Substituindo valores na coluna email \n",
         "credito_clean.loc[credito_clean['email'] == 'hotmaill.com', 'email'] = 'hotmail.com'\n",
         "credito_clean.loc[credito_clean['email'] == 'gmaill.com', 'email'] = 'gmail.com'\n",
+        "\n",
+        "# Deixando apenas a sigla do estado\n",
+        "credito_clean['shipping_state'] = credito_clean['shipping_state'].str[-2:]\n",
         "\n",
         "# Limpando a variável alvo\n",
         "credito_clean.dropna(subset=['target_default'], inplace=True)\n",
@@ -1528,11 +1533,9 @@
       "source": [
         "## **Análises e Feature Engineering**\n",
         "\n",
-        "A coluna `shipping_state` apresenta dados sobre os estados no formato `BR-MG`, `BR-SP`, etc. Vamos então remover a string `BR-`, deixando apenas a sigla do estado.\n",
-        "\n",
         "A coluna `application_time_applied` representa algo como a hora da aplicação. Da forma como está é difícil retirar qualquer *insight*, por isso vamos excluir os valores dos minutos e segundos, possibilitando a análise do impacto de cada hora de aplicação sobre a variável alvo.\n",
         "\n",
-        "Por fim, a coluna `profile_tags` contém *tags* atribuídas a cada solicitante em formato de lista. Vamos transformar esta coluna para que restem apenas as *tags* sem nenhum outro caractere, de forma que, mais a frente, poderemos transforma cada *tag* em uma variável *dummie*.\n"
+        "A coluna `profile_tags` contém *tags* atribuídas a cada solicitante em formato de lista. Vamos transformar esta coluna para que restem apenas as *tags* sem nenhum outro caractere, de forma que, mais a frente, poderemos transforma cada *tag* em uma variável *dummie*.\n"
       ]
     },
     {
@@ -1547,9 +1550,6 @@
         "outputId": "1e0d20fb-9cb6-46ae-d484-82f8948c2f1b"
       },
       "source": [
-        "# Deixando apenas a sigla do estado\n",
-        "credito_clean['shipping_state'] = credito_clean['shipping_state'].str[-2:]\n",
-        "\n",
         "# Excluindo os valores dos minutos e segundos\n",
         "credito_clean['application_time_applied'] = credito_clean['application_time_applied'].str[:2].astype(int)\n",
         "credito_clean.loc[credito_clean['application_time_applied'] == 24, 'application_time_applied'] = 0\n",
@@ -3513,7 +3513,7 @@
         "colab_type": "text"
       },
       "source": [
-        "O próximo passos será dividir o `dataset` em treino e teste e padronizar os dados utilizando a classe `StandardScaler`. Após realizarmos este processo com o *dataset* original, vamos usar a função `resample` para criar um *dataset* balanceado e repetir, neste novo *dataset*, o mesmo processo de divisão e padronização dos dados. Em seguida, vamos verificar o balanceamento."
+        "*O* próximo passo será dividir o `dataset` em treino e teste e padronizar os dados utilizando a classe `StandardScaler`. Após realizarmos este processo com o *dataset* original, vamos usar a função `resample` para criar um *dataset* balanceado e repetir, neste novo *dataset*, o mesmo processo de divisão e padronização dos dados. Em seguida, vamos verificar o balanceamento."
       ]
     },
     {
@@ -3766,7 +3766,7 @@
         "colab_type": "text"
       },
       "source": [
-        "De uma forma geral, os dados balanceados apresentaram melhores resultados considerando as quatro métricas utilizadas. Dentre os algoritmos, *Random Forests* apresentou os melhores resultados e, portanto, a combinação desse modelo com os dados balanceados é a escolhida para o projeto..\n",
+        "De uma forma geral, os dados balanceados apresentaram melhores resultados considerando as quatro métricas utilizadas. Dentre os algoritmos, *Random Forests* apresentou os melhores resultados e, portanto, a combinação desse modelo com os dados balanceados é a escolhida para o projeto.\n",
         "\n",
         "### ***Tunning* de Hiperparâmetros**\n",
         "\n",
