--- a/Análise de Risco de Crédito com Machine Learning.ipynb
+++ b/Análise de Risco de Crédito com Machine Learning.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of Análise de Risco de Crédito com Machine Learning.ipynb",
+      "name": "Análise de Risco de Crédito com Machine Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXpWzP2Q4f1Lk+ljYC74FU",
+      "authorship_tag": "ABX9TyMwvvHQkQMnEJCOjKi5Dw/Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +79,7 @@
         "!pip install https://github.com/matplotlib/basemap/archive/master.zip -q\n",
         "!pip install pyproj==1.9.6 -q"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +148,7 @@
         "credito = pd.read_csv('http://dl.dropboxusercontent.com/s/xn2a4kzf0zer0xu/acquisition_train.csv?dl=0')\n",
         "credito.head()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +506,7 @@
       "source": [
         "credito.info()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +590,7 @@
       "source": [
         "(credito.isnull().sum() / credito.shape[0] * 100).sort_values(ascending=False)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -675,7 +675,7 @@
       "source": [
         "credito.nunique().sort_values()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -760,7 +760,7 @@
       "source": [
         "credito.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1061,7 +1061,7 @@
         "print('Valore inf em reported_income: {}'.format(len(credito[credito['reported_income'] == np.inf])))\n",
         "print('Valore negativos em external_data_provider_email_seen_before: {}'.format(len(credito[credito['external_data_provider_email_seen_before'] < 0])))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1143,7 +1143,7 @@
         "\n",
         "credito_clean.head()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1432,7 +1432,7 @@
         "        \n",
         "    return col"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1463,7 +1463,7 @@
         "    else:\n",
         "        credito_clean[col].fillna(value=credito_clean[col].median(), inplace=True, axis=0)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1490,7 +1490,7 @@
       "source": [
         "credito_clean.isnull().sum()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1570,7 +1570,7 @@
         "\n",
         "credito_clean.head()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1835,7 +1835,7 @@
         "\n",
         "plt.tight_layout()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1888,7 +1888,7 @@
         "\n",
         "plt.tight_layout()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1925,7 +1925,7 @@
       "source": [
         "credito_clean['overnight'] = credito_clean['application_time_applied'].apply(lambda x: 1 if x <= 6 else 0)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1970,7 +1970,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2033,7 +2033,7 @@
         "plt.savefig('num.png')\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2086,7 +2086,7 @@
         "\n",
         "credito_clean.head()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2377,7 +2377,7 @@
         "plt.savefig('map.png')\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4043,7 +4043,7 @@
         "\n",
         "Como resultado, além de alguns *insights* relevantes sobre o impacto de algumas características na variável alvo, foi construído um modelo preditivo que demonstrou acurácia de 98%, sendo considerado um resultado satisfatório e, portando, cumprindo o objetivo inicialmente proposto.\n",
         "\n",
-        "Caso tenha alguma dúvida, sugestão ou feedback, sinta-se à vontade para entrar em contado via [GitHub](https://github.com/otavio-s-s/data_science) ou [Linkedin](https://www.linkedin.com/in/otavioss28/).\n"
+        "Caso tenha alguma dúvida, sugestão ou feedback, sinta-se à vontade para entrar em contato via [GitHub](https://github.com/otavio-s-s/data_science) ou [Linkedin](https://www.linkedin.com/in/otavioss28/).\n"
       ]
     }
   ]
